tests/fixtures/positive/complexity/StringLiteralDuplication.kt
package complexity

class StringLiteralDuplication {
    fun example() {
        println("duplicate")
        println("duplicate")
        println("duplicate")
    }
}
