tests/fixtures/negative/style/ForbiddenOptIn.kt
package style

fun example() {
    println("no opt-in used")
}
